--- a/contacts.html
+++ b/contacts.html
@@ -2,16 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Контакты — Золотарь 58</title>
+  <title>Контакты — Золотарь 58, Пенза</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Контактные данные Золотарь 58 — телефоны, email, время работы, адрес. Пенза и область.">
+  <meta name="description" content="Контакты службы ассенизации и прочистки канализации Золотарь 58. Телефон, адрес, карта для вызова по Пензе и области.">
   <meta property="og:title" content="Контакты — Золотарь 58">
-  <meta property="og:description" content="Свяжитесь с нами — работаем 24/7.">
+  <meta property="og:description" content="Связаться с ассенизатором. Адрес, телефон, схема проезда.">
   <meta property="og:image" content="logo.png">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://zolotar58.ru/contacts.html">
 </head>
 <body>
   <header class="header">
@@ -20,66 +19,52 @@
         <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <!-- Кликабельный заголовок только для мобилы! -->
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
-        <a href="contacts.html" style="color:#2478e2; font-weight:700;">Контакты</a>
+        <a href="contacts.html" class="active">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню">
-        <span></span>
-      </button>
+      <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
+
   <main>
-    <section class="main-intro" style="margin-top:35px;">
+    <section class="main-intro">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Свяжитесь с нами — работаем 24/7!</p>
+      <p class="main-subtitle">Свяжитесь с нами по телефону или приезжайте в офис. Работаем по Пензе и области 24/7.</p>
     </section>
-    <section class="contacts-box">
+    <div class="contacts-box">
+      <div><b>Адрес:</b> г. Пенза, ул. Пушанина, 46а</div>
       <div>
-        <div style="margin-bottom:1em;">
-          <b>Телефон:</b><br>
-          <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a>
-        </div>
-        <div style="margin-bottom:1em;">
-          <b>Короткий номер:</b>
-          <a href="tel:+78412773636" class="phone-link" style="background:#ebf3ff; color:#056ecf; border:1.2px solid #056ecf; margin-left:7px;">77-36-36</a>
-        </div>
-        <div style="margin-bottom:1em;">
-          <b>Email:</b><br>
-          <a href="mailto:zolotar58@list.ru" style="color:#056ecf; font-weight:500;">zolotar58@list.ru</a>
-        </div>
-        <div style="margin-bottom:1em;">
-          <b>Время работы:</b><br>
-          Круглосуточно, без выходных
-        </div>
-        <div style="margin-bottom:1em;">
-          <b>Адрес:</b><br>
-          г. Пенза, ул. Пушанина, 46А
-        </div>
+        <b>Телефон для связи:</b>
+        <a class="phone-link" href="tel:+79022073636">+7 (902) 207-36-36</a>
       </div>
-    </section>
-    <!-- Карта с меткой на Пушанина 46А -->
-    <div style="max-width: 100%; overflow: hidden; border-radius: 16px; box-shadow: 0 4px 22px 0 rgba(0,54,126,0.11); margin: 0 auto 28px auto;">
-      <iframe
-        src="https://yandex.ru/map-widget/v1/?from=mapframe&ll=45.007500%2C53.132147&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&source=mapframe&um=search%3A%7B%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0%2C%20%D1%83%D0%BB%D0%B8%D1%86%D0%B0%20%D0%9F%D1%83%D1%88%D0%B0%D0%BD%D0%B8%D0%BD%D0%B0%2C%2046%D0%90%7D&utm_source=mapframe&z=16.67"
-        width="100%" height="340" frameborder="0" allowfullscreen="true" style="border:0; display:block;">
-      </iframe>
+      <div><b>Режим работы:</b> ежедневно, 24/7</div>
+      <div><b>Email:</b> <a class="phone-link" href="mailto:zolotar58@yandex.ru">zolotar58@yandex.ru</a></div>
+    </div>
+
+    <div style="max-width: 700px; margin: 32px auto 0 auto; border-radius: 18px; box-shadow: 0 4px 32px 0 rgba(0,54,126,.07), 0 1.5px 5px 0 rgba(0,0,0,0.02); overflow:hidden; background:#fff;">
+      <!-- Яндекс.Карты с точной меткой на Пушанина 46а -->
+      <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&z=17.3"
+        width="100%" height="410" frameborder="0" allowfullscreen="true" style="display:block;border:0;"></iframe>
     </div>
   </main>
+
   <footer>
     <div class="container">
-      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46А</p>
+      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
     </div>
   </footer>
+
   <script>
+    // Бургер-меню
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      burger.addEventListener('click', function () {
+      burger.addEventListener('click', function (e) {
+        e.stopPropagation();
         nav.classList.toggle('open');
         burger.classList.toggle('active');
       });
