--- a/index.html
+++ b/index.html
@@ -2,214 +2,140 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Откачка канализации Пенза 24/7 | Ассенизатор Золотарь 58 — Прочистка труб, аварийная откачка</title>
+  <title>Откачка канализации Пенза 24/7 | Ассенизатор Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Профессиональная откачка канализации, септиков, выгребных ям. Прочистка труб и устранение засоров. Ассенизаторские услуги по Пензе и области 24/7. Круглосуточно.">
-  <meta name="keywords" content="откачка канализации пенза, ассенизатор пенза, откачка септика, аварийная откачка, чистка выгребных ям, каналопромывка, промывка канализации, прочистка труб, аварийная служба канализации, ассенизаторские услуги пенза, канализация пенза, откачка канализации круглосуточно, прочистка канализации пенза, вызов ассенизатора пенза, срочная откачка">
-  <meta property="og:title" content="Ассенизатор Пенза — Золотарь 58">
-  <meta property="og:description" content="Откачка канализации, прочистка труб, откачка септика и выгребных ям в Пензе и области. Круглосуточно, быстро, официально.">
-  <meta property="og:image" content="https://zolotar58.ru/logo.png">
-  <meta property="og:url" content="https://zolotar58.ru/">
-  <meta property="og:type" content="website">
-  <link rel="icon" type="image/png" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Откачка канализации, септиков, выгребных ям. Прочистка труб и устранение засоров. Круглосуточно, быстро и по договору. Пенза и область.">
+  <meta name="keywords" content="откачка канализации пенза, ассенизатор пенза, откачка септика, прочистка труб, откачка ям, аварийная прочистка, золотарь 58">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Откачка канализации Пенза 24/7 | Золотарь 58">
+  <meta property="og:description" content="Быстрая и профессиональная откачка канализации и септиков в Пензе и области. Работаем 24/7. Звоните!">
+  <meta property="og:image" content="logo.png">
+  <link rel="canonical" href="https://zolotar58.ru/">
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
-  <!-- Микроразметка Schema.org для LocalBusiness -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Золотарь 58",
-    "image": "https://zolotar58.ru/logo.png",
-    "telephone": "+7-902-207-36-36",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "ул. Пушанина, 46а",
-      "addressLocality": "Пенза",
-      "addressCountry": "Россия"
-    },
-    "url": "https://zolotar58.ru/",
-    "openingHours": "24/7",
-    "description": "Откачка канализации, прочистка, ассенизаторские услуги, аварийная служба в Пензе и области. Официально. Быстро. Круглосуточно."
-  }
-  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    /* Простая анимация появления */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 0.8s ease forwards;
+    }
+    .fade-in-delay-1 { animation-delay: 0.2s; }
+    .fade-in-delay-2 { animation-delay: 0.4s; }
+    .fade-in-delay-3 { animation-delay: 0.6s; }
+
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <body>
-  <header class="header">
+  <header class="header fade-in fade-in-delay-1">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58 — Ассенизатор Пенза, откачка канализации" title="Ассенизатор Золотарь 58 в Пензе">
+        <img src="logo.png" alt="Логотип Золотарь 58" class="logo-img">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню">
-        <span></span>
-      </button>
+      <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
 
-  <div class="working-now-bar">
-    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
-  </div>
+  <div class="working-now-bar fade-in fade-in-delay-2">📞 Работаем сейчас — Звоните: <a href="tel:+79173993030">+7 (917) 399-30-30</a></div>
 
   <main>
-    <h1>Откачка канализации и прочистка труб в Пензе 24/7</h1>
-    <h2>Ассенизаторские услуги: аварийная откачка, чистка септиков, промывка канализации</h2>
-    <p class="main-subtitle">
-      <b>Золотарь 58</b> — профессиональная откачка канализации, выгребных ям и септиков по Пензе и области. 
-      Современное оборудование, быстрый выезд <b>24/7</b>. Официально, без посредников, с гарантией результата.
-    </p>
-    <a class="cta" href="tel:+79022073636">Позвонить: +7-902-207-36-36</a>
-
-    <!-- SEO блок Услуг -->
-    <section>
-      <h2>Наши услуги</h2>
-      <ul>
-        <li>Откачка канализации (Пенза и область)</li>
-        <li>Откачка и чистка септиков</li>
-        <li>Аварийная откачка выгребных ям</li>
-        <li>Прочистка и промывка труб</li>
-        <li>Гидродинамическая промывка канализации</li>
-        <li>Обслуживание частных домов, организаций и предприятий</li>
-        <li>Срочный выезд аварийной службы канализации</li>
-      </ul>
+    <section class="main-intro fade-in fade-in-delay-1">
+      <h1>Откачка канализации в Пензе</h1>
+      <p class="main-subtitle">Круглосуточная ассенизаторская служба с современным оборудованием</p>
     </section>
 
-    <section class="why-us">
+    <section class="why-us fade-in fade-in-delay-2">
       <h2>Почему выбирают нас</h2>
       <ul>
-        <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — оперативная подача машины, 24/7 по Пензе и области.</li>
-        <li><span class="usp-icon">🛠️</span><b>Профессиональное оборудование</b> — гидродинамика, механика, видеоинспекция.</li>
-        <li><span class="usp-icon">💼</span><b>Работа с организациями</b> — заключаем официальные договоры, выдаём документы.</li>
-        <li><span class="usp-icon">💳</span><b>Удобная оплата</b> — наличные и безналичный расчет.</li>
-        <li><span class="usp-icon">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
+        <li>⏱ <b>24/7</b> — Работаем без выходных</li>
+        <li>🚛 <b>Большой парк техники</b> — Машины 4, 8 и 10 м³</li>
+        <li>📄 <b>Договор и документы</b> — Работаем с юрлицами</li>
+        <li>💳 <b>Удобная оплата</b> — Наличные, перевод, счёт</li>
       </ul>
     </section>
 
-    <!-- Слайдер отзывов с оценкой звёздами и ссылкой на Яндекс -->
-    <section>
-      <div class="reviews-slider">
-        <div class="reviews-title">Отзывы наших клиентов</div>
-        <div class="review-item active">
-          <div class="review-rating">
-            <span style="color: #FFC700;">★★★★★</span>
-          </div>
-          Всё понравилось, быстро приехали, всё сделали! Рекомендую.<div class="review-author">— Николай С.</div>
+    <section class="services-preview fade-in fade-in-delay-3">
+      <h2>Наши услуги</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <img src="septic.jpg" alt="Откачка септика">
+          <p>Откачка септиков и ям</p>
         </div>
-        <div class="review-item">
-          <div class="review-rating">
-            <span style="color: #FFC700;">★★★★★</span>
-          </div>
-          Заказывал откачку септика. Приехали в течение часа, всё аккуратно.<div class="review-author">— Ирина Д.</div>
+        <div class="service-card">
+          <img src="mechanical.jpg" alt="Прочистка труб">
+          <p>Прочистка и промывка труб</p>
         </div>
-        <div class="review-item">
-          <div class="review-rating">
-            <span style="color: #FFC700;">★★★★★</span>
-          </div>
-          Надёжная компания, обращаюсь не первый раз. Спасибо!<div class="review-author">— Владимир М.</div>
+        <div class="service-card">
+          <img src="service-org.jpg" alt="Обслуживание организаций">
+          <p>Обслуживание предприятий</p>
         </div>
-        <div class="slider-nav">
-          <button class="slider-dot active"></button>
-          <button class="slider-dot"></button>
-          <button class="slider-dot"></button>
-        </div>
-        <div class="reviews-yandex-link">
-          <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">
-            Все отзывы на Яндекс.Услугах <span style="font-size:1.2em;">→</span>
-          </a>
-        </div>
+      </div>
+      <a class="btn" href="services.html">Смотреть все услуги</a>
+    </section>
+
+    <section class="reviews fade-in fade-in-delay-3">
+      <h2>Отзывы клиентов</h2>
+      <div class="review-slider">
+        <blockquote>«Приехали быстро, всё откачали, трубы прочистили. Спасибо, рекомендую!» — <b>Анна П.</b></blockquote>
+        <blockquote>«Работаем по договору, всё официально. Молодцы!» — <b>ООО "ТехПром"</b></blockquote>
       </div>
     </section>
 
-    <!-- FAQ с ключевыми словами для SEO -->
-    <section class="faq-section">
-      <h2>Часто задаваемые вопросы</h2>
-      <ul class="faq-list">
-        <li>
-          <span class="faq-q">Сколько стоит откачка канализации?</span>
-          <span class="faq-a">Стоимость зависит от объёма и сложности. Позвоните для расчёта: <a href="tel:+79022073636">+7-902-207-36-36</a></span>
-        </li>
-        <li>
-          <span class="faq-q">Вызвать ассенизатора можно ночью или в выходные?</span>
-          <span class="faq-a">Да, мы работаем <b>24/7</b> без выходных и праздников!</span>
-        </li>
-        <li>
-          <span class="faq-q">Есть ли у вас лицензии и документы?</span>
-          <span class="faq-a">Да, предоставляем все официальные документы и отчёты для организаций.</span>
-        </li>
-        <li>
-          <span class="faq-q">Какие услуги кроме откачки канализации?</span>
-          <span class="faq-a">Также выполняем чистку и промывку труб, откачку септиков, устранение засоров.</span>
-        </li>
-      </ul>
-    </section>
-
-    <!-- Яндекс карта (SEO-friendly) -->
-    <section style="margin: 38px 0;">
-      <h2>Где мы работаем</h2>
-      <p><b>Ассенизатор Золотарь 58, Пенза, ул. Пушанина 46а</b></p>
-      <div style="position:relative;overflow:hidden; border-radius:18px; box-shadow:0 2px 12px rgba(0,54,126,.09); max-width:660px; margin:0 auto;">
-        <a href="https://yandex.ru/maps/org/zolotar_58/YEwYdgdnTEUHQFtpfX1yc31nYw==/?ll=45.007500%2C53.132147&z=16.67"
-          style="color:#eee;font-size:12px;position:absolute;top:0px; left:0;">Ассенизатор Пенза — Золотарь 58</a>
-        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007500%2C53.132147&z=16.67&mode=search&text=ассенизатор%20Пенза%20Пушанина%2046а"
-                width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;min-width:260px;"></iframe>
+    <section class="map fade-in fade-in-delay-2">
+      <h2>Работаем по всей Пензе и области</h2>
+      <div class="map-container">
+        <!-- Вставь свою карту -->
+        <iframe src="https://yandex.ru/map-widget/v1/?..." width="100%" height="300" frameborder="0"></iframe>
       </div>
     </section>
   </main>
 
-  <footer>
+  <footer class="fade-in fade-in-delay-3">
     <div class="container">
-      <p class="footer-text">
-        © 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
-        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a> |
-        <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener">2ГИС</a> |
-        <a href="https://www.avito.ru/penza?q=ассенизатор" target="_blank" rel="noopener">Avito</a>
-      </p>
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+      <p>г. Пенза, ул. Пушанина, 46а | <a href="tel:+79173993030">+7 (917) 399-30-30</a></p>
     </div>
   </footer>
 
   <script>
-    // Бургер меню
-    document.addEventListener("DOMContentLoaded", function () {
+    // Анимация при скролле
+    document.addEventListener("DOMContentLoaded", () => {
+      const elements = document.querySelectorAll('.fade-in');
+      const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.style.opacity = 1;
+            entry.target.style.transform = 'translateY(0)';
+            obs.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.1 });
+      elements.forEach(el => observer.observe(el));
+    });
+
+    // Бургер-меню
+    document.addEventListener("DOMContentLoaded", () => {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      burger.addEventListener('click', function () {
+      burger.addEventListener('click', e => {
         nav.classList.toggle('open');
         burger.classList.toggle('active');
       });
-      document.addEventListener('click', function (e) {
-        if (!burger.contains(e.target) && !nav.contains(e.target)) {
-          nav.classList.remove('open');
-          burger.classList.remove('active');
-        }
-      });
-
-      // Слайдер отзывов
-      const reviews = document.querySelectorAll('.review-item');
-      const dots = document.querySelectorAll('.slider-dot');
-      let current = 0;
-      function showReview(idx) {
-        reviews.forEach((el, i) => {
-          el.classList.toggle('active', i === idx);
-          dots[i].classList.toggle('active', i === idx);
-        });
-      }
-      dots.forEach((dot, i) => {
-        dot.addEventListener('click', () => {
-          current = i;
-          showReview(current);
-        });
-      });
-      setInterval(() => {
-        current = (current + 1) % reviews.length;
-        showReview(current);
-      }, 6000);
     });
   </script>
 </body>
