--- a/contacts.html
+++ b/contacts.html
@@ -2,21 +2,53 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Контакты — Золотарь 58, Пенза</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Контакты службы ассенизации и прочистки канализации Золотарь 58. Телефон, адрес, карта для вызова по Пензе и области.">
-  <meta property="og:title" content="Контакты — Золотарь 58">
-  <meta property="og:description" content="Связаться с ассенизатором. Адрес, телефон, схема проезда.">
-  <meta property="og:image" content="logo.png">
-  <link rel="icon" type="image/png" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Контакты ассенизатора в Пензе | Золотарь 58 — круглосуточная откачка канализации</title>
+  <meta name="description" content="Контактные данные службы ассенизации Золотарь 58 в Пензе. Адрес: ул. Пушанина, 46а. Телефон: +7 (902) 207-36-36. Работаем 24/7.">
+  <meta name="keywords" content="ассенизатор пенза контакты, вызов ассенизатора, телефон ассенизатора, адрес ассенизаторской службы">
+  <meta property="og:title" content="Контакты ассенизаторской службы Золотарь 58">
+  <meta property="og:description" content="Круглосуточный выезд по Пензе и области. Адрес, телефон, схема проезда.">
+  <meta property="og:image" content="https://zolotar58.ru/logo.png">
+  <meta property="og:url" content="https://zolotar58.ru/contacts.html">
+  <link rel="canonical" href="https://zolotar58.ru/contacts.html">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Микроразметка для контактов -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Золотарь 58",
+    "image": "https://zolotar58.ru/logo.png",
+    "telephone": "+79022073636",
+    "email": "zolotar58@yandex.ru",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "ул. Пушанина, 46а",
+      "addressLocality": "Пенза",
+      "addressRegion": "Пензенская область",
+      "postalCode": "440000",
+      "addressCountry": "Россия"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "53.132175",
+      "longitude": "45.007491"
+    },
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 00:00-23:59",
+    "priceRange": "₽₽",
+    "url": "https://zolotar58.ru/"
+  }
+  </script>
 </head>
 <body>
-  <header class="header">
+  <header class="header" id="sticky-header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58 — ассенизаторские услуги в Пензе" width="60" height="60">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
@@ -26,55 +58,111 @@
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html" class="active">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню"><span></span></button>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
     </div>
   </header>
 
-  <main>
+  <main class="contacts-page">
     <section class="main-intro">
-      <h1>Контакты</h1>
-      <p class="main-subtitle">Свяжитесь с нами по телефону или приезжайте в офис. Работаем по Пензе и области 24/7.</p>
+      <h1>Контакты ассенизаторской службы</h1>
+      <p class="main-subtitle">Круглосуточный выезд по Пензе и области. Звоните в любое время!</p>
     </section>
-    <div class="contacts-box">
-      <div><b>Адрес:</b> г. Пенза, ул. Пушанина, 46а</div>
-      <div>
-        <b>Телефон для связи:</b>
-        <a class="phone-link" href="tel:+79022073636">+7 (902) 207-36-36</a>
-      </div>
-      <div><b>Режим работы:</b> ежедневно, 24/7</div>
-      <div><b>Email:</b> <a class="phone-link" href="mailto:zolotar58@yandex.ru">zolotar58@yandex.ru</a></div>
-    </div>
 
-    <div style="max-width: 700px; margin: 32px auto 0 auto; border-radius: 18px; box-shadow: 0 4px 32px 0 rgba(0,54,126,.07), 0 1.5px 5px 0 rgba(0,0,0,0.02); overflow:hidden; background:#fff;">
-      <!-- Яндекс.Карты с точной меткой на Пушанина 46а -->
-      <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&z=17.3"
-        width="100%" height="410" frameborder="0" allowfullscreen="true" style="display:block;border:0;"></iframe>
-    </div>
+    <section class="contacts-section">
+      <div class="contacts-box">
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+          </svg>
+          <div>
+            <h3 class="contact-title">Адрес офиса</h3>
+            <p class="contact-value">г. Пенза, ул. Пушанина, 46а</p>
+          </div>
+        </div>
+
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56-.35-.12-.74-.03-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/>
+          </svg>
+          <div>
+            <h3 class="contact-title">Телефон</h3>
+            <p class="contact-value">
+              <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+          </svg>
+          <div>
+            <h3 class="contact-title">Email</h3>
+            <p class="contact-value">
+              <a href="mailto:zolotar58@yandex.ru" class="email-link">zolotar58@yandex.ru</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
+          </svg>
+          <div>
+            <h3 class="contact-title">Режим работы</h3>
+            <p class="contact-value">Круглосуточно, без выходных</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="map-section">
+      <h2 class="section-title visually-hidden">Мы на карте</h2>
+      <div class="map-container">
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007491%2C53.132175&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgozMDk2MDcwNTIxEjvQoNC-0YHRgdC40Y8sINCf0LXQvdC30LAsINGD0LvQuNGG0LAg0J_Rg9GI0LDQvdC40L3QsCwgNDbQkCIKDa8HNEIVUodUQg%2C%2C&z=17.3"
+          width="100%" height="400" loading="lazy" frameborder="0" allowfullscreen="true" aria-label="Карта с расположением офиса на улице Пушанина 46а"></iframe>
+      </div>
+    </section>
   </main>
 
-  <footer>
+  <footer class="footer">
     <div class="container">
-      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
+      <p class="footer-text">
+        © 2025 Золотарь 58 — ИП Зоткин А.И.<br>
+        г. Пенза, ул. Пушанина, 46а<br>
+        <a href="tel:+79022073636">+7 (902) 207-36-36</a>
+      </p>
     </div>
   </footer>
 
   <script>
-    // Бургер-меню
-    document.addEventListener("DOMContentLoaded", function () {
+    // Бургер-меню с блокировкой скролла
+    document.addEventListener("DOMContentLoaded", function() {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      burger.addEventListener('click', function (e) {
+      
+      burger.addEventListener('click', function(e) {
         e.stopPropagation();
         nav.classList.toggle('open');
         burger.classList.toggle('active');
+        document.body.classList.toggle('no-scroll');
       });
-      document.addEventListener('click', function (e) {
+
+      document.addEventListener('click', function(e) {
         if (!burger.contains(e.target) && !nav.contains(e.target)) {
           nav.classList.remove('open');
           burger.classList.remove('active');
+          document.body.classList.remove('no-scroll');
         }
       });
     });
+
+    // Ленивая загрузка карты
+    if ('loading' in HTMLIFrameElement.prototype) {
+      document.querySelector('iframe').loading = 'lazy';
+    }
   </script>
 </body>
 </html>
