--- a/about.html
+++ b/about.html
@@ -2,43 +2,65 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>О компании — Золотарь 58 | Ассенизаторские услуги в Пензе</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="История и преимущества компании Золотарь 58. Ассенизаторские услуги, откачка канализации, чистка труб в Пензе с 2020 года.">
-  <meta name="keywords" content="о компании, история, ассенизатор пенза, откачка канализации пенза, чистка труб пенза, выгребные ямы, услуги ассенизатора, Золотарь 58, лицензии, опыт работы, отзывы, сотрудники, официальный подрядчик">
-  <meta property="og:title" content="О компании — Золотарь 58">
-  <meta property="og:description" content="Золотарь 58 — надёжный партнёр по откачке канализации и чистке труб в Пензе и области.">
-  <meta property="og:image" content="https://zolotar58.ru/logo.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>О компании Золотарь 58 в Пензе | Ассенизаторские услуги с 2020 года</title>
+  <meta name="description" content="Профессиональная ассенизаторская служба в Пензе. Откачка канализации, чистка труб и септиков. Опыт работы с 2020 года, современное оборудование, официальные документы.">
+  <meta name="keywords" content="ассенизаторская компания Пенза, история компании, откачка канализации, чистка труб, ассенизаторские услуги, Золотарь 58, профессиональные услуги">
+  <meta property="og:title" content="О компании Золотарь 58 | Профессиональные ассенизаторские услуги">
+  <meta property="og:description" content="Надёжная служба откачки канализации в Пензе с 2020 года. Современное оборудование, официальные документы.">
+  <meta property="og:image" content="https://zolotar58.ru/img/about-preview.jpg">
   <meta property="og:url" content="https://zolotar58.ru/about.html">
   <meta property="og:type" content="website">
-  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="canonical" href="https://zolotar58.ru/about.html">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <!-- Микроразметка Schema.org для LocalBusiness -->
+  <!-- Микроразметка Organization -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "LocalBusiness",
+    "@type": "Organization",
     "name": "Золотарь 58",
-    "image": "https://zolotar58.ru/logo.png",
-    "telephone": "+7-902-207-36-36",
+    "legalName": "ИП Зоткин А.И.",
+    "url": "https://zolotar58.ru",
+    "logo": "https://zolotar58.ru/logo.png",
+    "foundingDate": "2020",
+    "founders": [
+      {
+        "@type": "Person",
+        "name": "Зоткин Александр Иванович"
+      }
+    ],
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "ул. Пушанина, 46а",
       "addressLocality": "Пенза",
+      "addressRegion": "Пензенская область",
+      "postalCode": "440000",
       "addressCountry": "Россия"
     },
-    "url": "https://zolotar58.ru/",
-    "openingHours": "24/7",
-    "description": "О компании Золотарь 58 — Ассенизаторские услуги, откачка канализации, чистка труб и септиков в Пензе и области с 2020 года."
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+79022073636",
+      "contactType": "customer service",
+      "email": "zolotar58@yandex.ru",
+      "areaServed": "Пенза и область",
+      "availableLanguage": "Russian"
+    },
+    "sameAs": [
+      "https://uslugi.yandex.ru/profile/AleksandrZotkin-886001",
+      "https://2gis.ru/penza/firm/..."
+    ]
   }
   </script>
 </head>
 <body>
-  <header class="header">
+  <header class="header" id="sticky-header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58 — Ассенизатор в Пензе">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58 — профессиональные ассенизаторские услуги в Пензе" width="60" height="60">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
@@ -55,94 +77,133 @@
   </header>
 
   <div class="working-now-bar">
-    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
+    <span class="working-icon">💧</span> Работаем сейчас <span class="working-separator">•</span> Пушанина 46а, Пенза
   </div>
 
-  <main>
+  <main class="about-page">
     <section class="main-intro">
       <h1>О компании «Золотарь 58»</h1>
       <p class="main-subtitle">
-        <b>Золотарь 58</b> — это команда профессионалов с опытом работы более 4 лет, предоставляющая услуги откачки канализации, чистки труб и септиков в Пензе и области. Мы работаем с частными лицами, организациями, управляющими компаниями и предприятиями.
+        Профессиональные ассенизаторские услуги в Пензе с 2020 года. Современное оборудование, официальные документы, гарантия качества.
       </p>
     </section>
 
-    <section class="about-text">
-      <h2>История компании</h2>
-      <p>
-        Компания «Золотарь 58» основана в <b>2020 году</b> в Пензе. За это время мы помогли сотням клиентов, заработали репутацию честных исполнителей и заслужили множество положительных отзывов.
-      </p>
-      <p>
-        В <b>2025 году</b> для удобства наших клиентов был запущен собственный сайт, чтобы сделать заказ ассенизаторских услуг ещё быстрее и проще. Однако мы работаем и принимаем заявки только по телефону — <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a>.
-      </p>
-      <h2>Наши преимущества</h2>
-      <ul>
-        <li>Оперативный выезд по Пензе и области 24/7</li>
-        <li>Современное оборудование: гидродинамика, механика, видеоинспекция</li>
-        <li>Официальные документы для организаций</li>
-        <li>Гарантия результата и чистоты</li>
-        <li>Вежливый и опытный персонал</li>
-        <li>Честные цены без скрытых доплат</li>
-      </ul>
-      <h2>С кем работаем</h2>
-      <ul>
-        <li>Частные домовладения</li>
-        <li>Дачи, СНТ, коттеджи</li>
-        <li>Кафе, рестораны, магазины</li>
-        <li>Управляющие компании</li>
-        <li>Производственные предприятия</li>
-        <li>Школы, детские сады, объекты соцсферы</li>
-      </ul>
-      <h2>Наш адрес и контакты</h2>
-      <p>
-        <b>г. Пенза, ул. Пушанина, 46а</b><br>
-        Телефон для заказа: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a>
-      </p>
-    </section>
+    <section class="about-content">
+      <article class="about-section">
+        <h2>Наша история</h2>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-year">2020</div>
+            <div class="timeline-content">
+              <h3>Основание компании</h3>
+              <p>Начало работы с одним ассенизаторским автомобилем и минимальным набором оборудования.</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-year">2022</div>
+            <div class="timeline-content">
+              <h3>Расширение парка техники</h3>
+              <p>Приобретение дополнительной спецтехники и оборудования для гидродинамической промывки.</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-year">2025</div>
+            <div class="timeline-content">
+              <h3>Запуск сайта</h3>
+              <p>Создание онлайн-представительства для удобства клиентов.</p>
+            </div>
+          </div>
+        </div>
+      </article>
 
-    <section class="faq-section">
-      <h2>Частые вопросы</h2>
-      <ul class="faq-list">
-        <li>
-          <span class="faq-q">Как сделать заказ?</span>
-          <span class="faq-a">Просто позвоните по телефону <a href="tel:+79022073636">+7-902-207-36-36</a>. Мы работаем без выходных, заявки через сайт не принимаем.</span>
-        </li>
-        <li>
-          <span class="faq-q">Какие документы предоставляете?</span>
-          <span class="faq-a">Для организаций выдаём все необходимые официальные бумаги и закрывающие документы.</span>
-        </li>
-        <li>
-          <span class="faq-q">Сколько стоит откачка?</span>
-          <span class="faq-a">Цена зависит от объёма и сложности. Позвоните, и рассчитаем стоимость индивидуально.</span>
-        </li>
-      </ul>
+      <article class="advantages-section">
+        <h2>Наши преимущества</h2>
+        <div class="advantages-grid">
+          <div class="advantage-card">
+            <div class="advantage-icon">🚚</div>
+            <h3>Быстрый выезд</h3>
+            <p>Среднее время подачи машины — 60 минут по Пензе</p>
+          </div>
+          <div class="advantage-card">
+            <div class="advantage-icon">🛠️</div>
+            <h3>Современное оборудование</h3>
+            <p>Илососные машины, гидродинамические установки, видеодиагностика</p>
+          </div>
+          <div class="advantage-card">
+            <div class="advantage-icon">📋</div>
+            <h3>Официальные документы</h3>
+            <p>Все необходимые лицензии и разрешения</p>
+          </div>
+          <div class="advantage-card">
+            <div class="advantage-icon">👨‍🔧</div>
+            <h3>Опытные сотрудники</h3>
+            <p>Средний стаж специалистов — 5 лет</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="clients-section">
+        <h2>Наши клиенты</h2>
+        <div class="clients-logos">
+          <div class="client-logo" aria-label="Частные домовладения"></div>
+          <div class="client-logo" aria-label="Управляющие компании"></div>
+          <div class="client-logo" aria-label="Кафе и рестораны"></div>
+          <div class="client-logo" aria-label="Производственные предприятия"></div>
+        </div>
+      </article>
+
+      <article class="cta-section">
+        <h2>Готовы помочь прямо сейчас</h2>
+        <p>Круглосуточный выезд по Пензе и области</p>
+        <a href="tel:+79022073636" class="cta-button">Позвонить: +7 (902) 207-36-36</a>
+      </article>
     </section>
   </main>
 
-  <footer>
+  <footer class="footer">
     <div class="container">
       <p class="footer-text">
-        © 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
-        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a> |
-        <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener">2ГИС</a> |
-        <a href="https://www.avito.ru/penza?q=ассенизатор" target="_blank" rel="noopener">Avito</a>
+        © 2025 Золотарь 58 — ИП Зоткин А.И.<br>
+        г. Пенза, ул. Пушанина, 46а<br>
+        <a href="tel:+79022073636">+7 (902) 207-36-36</a>
       </p>
+      <div class="footer-links">
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы на Яндекс.Услугах</a>
+        <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener nofollow">2ГИС</a>
+        <a href="https://www.avito.ru/penza?q=ассенизатор" target="_blank" rel="noopener nofollow">Avito</a>
+      </div>
     </div>
   </footer>
 
   <script>
-    // Бургер меню
-    document.addEventListener("DOMContentLoaded", function () {
+    // Бургер-меню с блокировкой скролла
+    document.addEventListener("DOMContentLoaded", function() {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      burger.addEventListener('click', function () {
+      
+      burger.addEventListener('click', function(e) {
+        e.stopPropagation();
         nav.classList.toggle('open');
         burger.classList.toggle('active');
+        document.body.classList.toggle('no-scroll');
       });
-      document.addEventListener('click', function (e) {
+
+      document.addEventListener('click', function(e) {
         if (!burger.contains(e.target) && !nav.contains(e.target)) {
           nav.classList.remove('open');
           burger.classList.remove('active');
+          document.body.classList.remove('no-scroll');
         }
+      });
+    });
+
+    // Плавная прокрутка для якорей
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
       });
     });
   </script>
