--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
       <div class="footer-links">
         <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы на Яндекс.Услугах</a>
         <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener nofollow">2ГИС</a>
-        <a href="https://www.avito.ru/penza?q=ассенизатор" target="_blank" rel="noopener nofollow">Avito</a>
+        <a href="https://www.avito.ru/penza/predlozheniya_uslug/prochistka_kanalizatsii_ustranenie_zasorov_3980560866" target="_blank" rel="noopener nofollow">Avito</a>
       </div>
     </div>
   </footer>
