--- a/about.html
+++ b/about.html
@@ -2,208 +2,76 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>О компании Золотарь 58 в Пензе | Ассенизаторские услуги с 2020 года</title>
-  <meta name="description" content="Профессиональная ассенизаторская служба в Пензе. Откачка канализации, чистка труб и септиков. Опыт работы с 2020 года, современное оборудование, официальные документы.">
-  <meta name="keywords" content="ассенизаторская компания Пенза, история компании, откачка канализации, чистка труб, ассенизаторские услуги, Золотарь 58, профессиональные услуги">
-  <meta property="og:title" content="О компании Золотарь 58 | Профессиональные ассенизаторские услуги">
-  <meta property="og:description" content="Надёжная служба откачки канализации в Пензе с 2020 года. Современное оборудование, официальные документы.">
-  <meta property="og:image" content="https://zolotar58.ru/img/about-preview.jpg">
-  <meta property="og:url" content="https://zolotar58.ru/about.html">
-  <meta property="og:type" content="website">
-  <link rel="canonical" href="https://zolotar58.ru/about.html">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <title>О компании — Золотарь 58 | Ассенизатор в Пензе</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Узнайте больше о компании Золотарь 58. Ассенизаторские услуги, откачка канализации, опыт более 10 лет, современная техника.">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <!-- Микроразметка Organization -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Золотарь 58",
-    "legalName": "ИП Зоткин А.И.",
-    "url": "https://zolotar58.ru",
-    "logo": "https://zolotar58.ru/logo.png",
-    "foundingDate": "2020",
-    "founders": [
-      {
-        "@type": "Person",
-        "name": "Зоткин Александр Иванович"
-      }
-    ],
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "ул. Пушанина, 46а",
-      "addressLocality": "Пенза",
-      "addressRegion": "Пензенская область",
-      "postalCode": "440000",
-      "addressCountry": "Россия"
-    },
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+79022073636",
-      "contactType": "customer service",
-      "email": "zolotar58@yandex.ru",
-      "areaServed": "Пенза и область",
-      "availableLanguage": "Russian"
-    },
-    "sameAs": [
-      "https://uslugi.yandex.ru/profile/AleksandrZotkin-886001",
-      "https://2gis.ru/penza/firm/..."
-    ]
-  }
-  </script>
 </head>
 <body>
-  <header class="header" id="sticky-header">
+  <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58 — профессиональные ассенизаторские услуги в Пензе" width="60" height="60">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
       <nav class="nav">
+        <a href="index.html">Главная</a>
         <a href="services.html">Услуги</a>
         <a href="about.html" class="active">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню">
-        <span></span>
-      </button>
+      <a href="tel:+79022073636" class="call-btn">Позвонить</a>
+      <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
 
   <div class="working-now-bar">
-    <span class="working-icon">💧</span> Работаем сейчас <span class="working-separator">•</span> Пушанина 46а, Пенза
+    💧 Работаем сейчас • Пушанина 46а, Пенза
   </div>
 
-  <main class="about-page">
-    <section class="main-intro">
-      <h1>О компании «Золотарь 58»</h1>
-      <p class="main-subtitle">
-        Профессиональные ассенизаторские услуги в Пензе с 2020 года. Современное оборудование, официальные документы, гарантия качества.
-      </p>
+  <main>
+    <section class="page-intro">
+      <div class="container">
+        <h1>О компании</h1>
+        <p>Мы работаем на рынке ассенизаторских услуг с 2015 года. За это время мы выполнили сотни заказов по Пензе и области, помогли частным лицам, предприятиям, управляющим компаниям.</p>
+      </div>
     </section>
 
-    <section class="about-content">
-      <article class="about-section">
-        <h2>Наша история</h2>
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="timeline-year">2020</div>
-            <div class="timeline-content">
-              <h3>Основание компании</h3>
-              <p>Начало работы с одним ассенизаторским автомобилем и минимальным набором оборудования.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-year">2022</div>
-            <div class="timeline-content">
-              <h3>Расширение парка техники</h3>
-              <p>Приобретение дополнительной спецтехники и оборудования для гидродинамической промывки.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-year">2025</div>
-            <div class="timeline-content">
-              <h3>Запуск сайта</h3>
-              <p>Создание онлайн-представительства для удобства клиентов.</p>
-            </div>
-          </div>
+    <section class="about-details">
+      <div class="container about-grid">
+        <div>
+          <h2>Наши ценности</h2>
+          <ul>
+            <li>Честные и прозрачные цены</li>
+            <li>Круглосуточная работа 24/7</li>
+            <li>Оперативный выезд в течение часа</li>
+            <li>Современное оборудование</li>
+            <li>Ответственность и гарантия результата</li>
+          </ul>
         </div>
-      </article>
-
-      <article class="advantages-section">
-        <h2>Наши преимущества</h2>
-        <div class="advantages-grid">
-          <div class="advantage-card">
-            <div class="advantage-icon">🚚</div>
-            <h3>Быстрый выезд</h3>
-            <p>Среднее время подачи машины — 60 минут по Пензе</p>
-          </div>
-          <div class="advantage-card">
-            <div class="advantage-icon">🛠️</div>
-            <h3>Современное оборудование</h3>
-            <p>Илососные машины, гидродинамические установки, видеодиагностика</p>
-          </div>
-          <div class="advantage-card">
-            <div class="advantage-icon">📋</div>
-            <h3>Официальные документы</h3>
-            <p>Все необходимые лицензии и разрешения</p>
-          </div>
-          <div class="advantage-card">
-            <div class="advantage-icon">👨‍🔧</div>
-            <h3>Опытные сотрудники</h3>
-            <p>Средний стаж специалистов — 5 лет</p>
-          </div>
+        <div>
+          <img src="about-photo.jpg" alt="Работа компании Золотарь 58">
         </div>
-      </article>
-
-      <article class="clients-section">
-        <h2>Наши клиенты</h2>
-        <div class="clients-logos">
-          <div class="client-logo" aria-label="Частные домовладения"></div>
-          <div class="client-logo" aria-label="Управляющие компании"></div>
-          <div class="client-logo" aria-label="Кафе и рестораны"></div>
-          <div class="client-logo" aria-label="Производственные предприятия"></div>
-        </div>
-      </article>
-
-      <article class="cta-section">
-        <h2>Готовы помочь прямо сейчас</h2>
-        <p>Круглосуточный выезд по Пензе и области</p>
-        <a href="tel:+79022073636" class="cta-button">Позвонить: +7 (902) 207-36-36</a>
-      </article>
+      </div>
     </section>
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p class="footer-text">
-        © 2025 Золотарь 58 — ИП Зоткин А.И.<br>
-        г. Пенза, ул. Пушанина, 46а<br>
-        <a href="tel:+79022073636">+7 (902) 207-36-36</a>
-      </p>
-      <div class="footer-links">
-        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы на Яндекс.Услугах</a>
-        <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener nofollow">2ГИС</a>
-        <a href="https://www.avito.ru/penza/predlozheniya_uslug/prochistka_kanalizatsii_ustranenie_zasorov_3980560866" target="_blank" rel="noopener nofollow">Avito</a>
-      </div>
+  <footer>
+    <div class="container footer-flex">
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе</p>
+      <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a>
     </div>
   </footer>
 
   <script>
-    // Бургер-меню с блокировкой скролла
-    document.addEventListener("DOMContentLoaded", function() {
+    document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      
-      burger.addEventListener('click', function(e) {
-        e.stopPropagation();
+      burger.addEventListener('click', function () {
         nav.classList.toggle('open');
         burger.classList.toggle('active');
-        document.body.classList.toggle('no-scroll');
-      });
-
-      document.addEventListener('click', function(e) {
-        if (!burger.contains(e.target) && !nav.contains(e.target)) {
-          nav.classList.remove('open');
-          burger.classList.remove('active');
-          document.body.classList.remove('no-scroll');
-        }
-      });
-    });
-
-    // Плавная прокрутка для якорей
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
       });
     });
   </script>
